--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,11 @@
 <div class="main posts-index">
   <div class="container">
     <div class="posts-index-item">
-      投稿内容
+      <% @posts.each do |post| %>
+        <div class="posts-index-item">
+          <%= post.content %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
