--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
     <div class="posts-index-item">
       <% @posts.each do |post| %>
         <div class="posts-index-item">
-          <%= post.content %>
+          <%= link_to(post.content, "/posts/#{post.id}") %>
         </div>
       <% end %>
     </div>
