--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,13 @@
 <div class="main posts-new">
   <div class="container">
     <h1 class="form-heading">投稿する</h1>
-  </div>
-  <div class="form">
-    <textarea name="content"></textarea>
-    <input type="submit" value="投稿">
+    <%= form_tag("/posts/create") do %>
+      <div class="form">
+        <div class="form-body">
+          <textarea name="content"></textarea>
+          <input type="submit" value="投稿">
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
