--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,5 +9,8 @@
     <div>
       <%= link_to("戻る", "/posts/index") %>
     </div>
+    <div>
+      <%= link_to("編集", "/posts/#{@post.id}/edit") %>
+    </div>
   </div>
 </div>
