--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,8 +9,9 @@
     <div>
       <%= link_to("戻る", "/posts/index") %>
     </div>
-    <div>
+    <div class="post-menus">
       <%= link_to("編集", "/posts/#{@post.id}/edit") %>
+      <%= link_to("削除", "/posts/#{@post.id}/destroy", {method: "post"}) %>
     </div>
   </div>
 </div>
